Fix alignment of the page

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,10 @@
   border-radius: 15px;
 }
 
-
+.quoteDiv,
+.calcuDiv {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 50%;
+}
